--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página en Progreso</title>
+    <title>Saturno</title>
     <style>
         * {
             margin: 0;
@@ -160,7 +160,7 @@
             <div class="saturn-rings"></div>
         </div>
         <div class="progress-text">
-            <h1>PÁGINA EN PROGRESO</h1>
+            <h1>AUN NO ES MOMENTO</h1>
         </div>
     </div>
 
